Bug 803614 - Save received file