dom/bluetooth/ObexBase.h
@@ -198,6 +198,9 @@ int AppendHeaderConnectionId(uint8_t* retBuf, int connectionId);
 void SetObexPacketInfo(uint8_t* retBuf, uint8_t opcode, int packetLength);
 void ParseHeaders(uint8_t* buf, int totalLength, ObexHeaderSet* retHanderSet);
 
+// -1 means cannot find header "Body"
+int GetHeaderBodyOffset(uint8_t* headerStart, int totalLength);
+
 END_BLUETOOTH_NAMESPACE
 
 #endif
